--- a/platform_code/assessment/templates/assessment/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation.html
@@ -77,7 +77,7 @@
                     {% trans "Start a new evaluation" %}
             </button>
         {% else %}
-            <button type="button" class="btn btn-primary float-right same-size-280" disabled="True"
+            <button type="button" class="btn btn-primary float-right same-size-280" disabled
                    style="margin:auto;" title="{% trans 'We are sorry, there is no assessment available yet.' %}">
                     {% trans "Start a new evaluation" %}
             </button>
