--- a/platform_code/assessment/templates/assessment/upgrade-banner.html
+++ b/platform_code/assessment/templates/assessment/upgrade-banner.html
@@ -4,16 +4,18 @@
 
 <header role="banner" class="upgrade-banner margin-bot-top-20">{% trans "Your evaluation version is not up to date. Do you want to" %}
     {% if evaluation.organisation|get_role:user == "admin" %}
-        <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval"
+        <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
         >{% trans " upgrade" %}</a>
     {% else %}
         <a href="#" title="{% trans ' You do not have the right to do this action' %}"
         >{% trans " upgrade" %}</a>
-    {% trans "? Your answers will be preserved." %}
+        {% trans "? Your answers will be preserved." %}
+    {% endif %}
 </header>
 
-<div class="modal" id="modal-upgrade-eval" aria-hidden="true">
-  <div class="modal-dialog ">
+<div class="modal" id="modal-upgrade-eval{{evaluation.id}}" aria-hidden="true"
+     data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog">
     <div class="modal-content">
 
     {% include "assessment/upgrade-modal.html" %}
