--- a/platform_code/assessment/templates/assessment/upgrade-modal.html
+++ b/platform_code/assessment/templates/assessment/upgrade-modal.html
@@ -2,21 +2,29 @@
 {% load i18n %}
 
 
-
 <div class="modal-header">
-    <h4 class="modal-title" >{% trans 'Upgrade the evaluation' %}</h4>
+    <h4 class="modal-title absolute-position" >{% trans 'Upgrade the evaluation' %}</h4>
     <button type="button" class="close" data-dismiss="modal">&times;</button>
 </div>
+
 <div class="modal-body">
-
-      <p>{% trans "Do you want to upgrade your evaluation to the latest version? Your answers and your notes will be transferred to the new evaluation. This evaluation won't be deleted by the process." %}</p>
-
-
+      <p>{% trans "Do you want to upgrade your evaluation to the latest version? Your answers and your notes will be transferred to the new evaluation. This evaluation won't be deleted by the process." %}
+      </p>
 </div>
-<div class="modal-footer">
-    <a type="submit" class="btn btn-primary same-size-250"
-           href="{% url 'assessment:upgrade' evaluation.organisation.id evaluation.slug evaluation.id %}"
-       style="margin: auto" >{% trans 'Yes' %}</a>
-    <input type="button" class="btn btn-danger same-size-250"
-           data-dismiss="modal" value="{% trans 'Cancel' %}" style="margin: auto;"/>
+
+<div class="modal-footer self-center">
+    <form action="{% url 'assessment:upgrade' evaluation.organisation.id evaluation.slug evaluation.id %}"
+          method="get" id="upgrade_form{{evaluation.id}}">
+        <button class="btn btn-primary same-size-250 margin-auto" type="button"
+                onclick="upgrade('modal-upgrade-eval{{evaluation.id}}', 'upgrade_form{{evaluation.id}}', '{{evaluation.id}}')"
+            >{% trans 'Yes' %}
+        </button>
+    </form>
+    <button type="button" class="btn btn-danger same-size-250 margin-auto"
+            data-dismiss="modal">{% trans 'Cancel' %}
+    </button>
+</div>
+
+<div id="upgrade_message{{evaluation.id}}" class="alert margin-10 display-none">
+    <p id="upgrade_message_text{{evaluation.id}}"></p>
 </div>
