--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -96,12 +96,12 @@
                                     </div>
                                 {% endif %}
 
-                                <div id="question-text" class="sub-question-headers">
+                                <div id="question-text" class="sub-question-headers grid-container-2-cols row margin-left-em">
                                     <div id="question-name" class="question-name">
                                         Q{{section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} : {{element.master_evaluation_element.question_text|markdownify}}
                                     </div>
                                     {% if element.master_evaluation_element.explanation_text %}
-                                    <div class="help-tip help-tip-explanation absolute-position" style="font-size:18px;">
+                                    <div class="help-tip help-tip-explanation absolute-position">
                                         <p>{{element.master_evaluation_element.explanation_text|markdownify}}</p>
                                     </div>
 
