--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -6,35 +6,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link href="{% static 'image/favicon.ico' %}" rel="shortcut icon" type="image/png">
     <link href="{% static 'js/jquery-3.5.1.min.js' %}" >
-
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
-
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}" defer></script>
+    <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}" defer></script>
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" >
     <link href="{% static 'vendor/bootstrap/css/bootstrap-grid.min.css' %}" type="text/css" rel="stylesheet" >
     <link href="{% static 'vendor/bootstrap/css/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet" >
-
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <script src="{% static 'js/bootstrap.modal.js' %}"></script>
-
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}" defer></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}" defer></script>
+    <script src="{% static 'js/bootstrap.modal.js' %}" defer></script>
     <link href="{% static 'js/jquery-3.5.1.min.js' %}" type="" rel="" >
     <link href="{% static 'css/base.css' %}" type="text/css" rel="stylesheet" >
-
-
-
 </head>
 
 <div style="text-align: center; ">
-
     <div id="image">
         <img  src="{% static 'image/Substra_Logo_couleur_RVB.png' %}"
               title="logo substra" alt="logo substra">
